welcome.lessons.welcome.loopwhile.LoopWhile.scala.error
Program:1: error: not found: type False
while (estFaceMur():False) {
                    ^Program:2: error: not found: value avancer
  avancer();
  ^